Fix Tailwind CSS v4 configuration and styling setup

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
       "name": "Language Learning Game",
       "version": "0.1.0",
       "private": true,
+      "type": "module",
       "dependencies": {
             "@eslint/js": "*",
             "@radix-ui/react-accordion": "^1.2.3",
@@ -30,9 +31,11 @@
             "@radix-ui/react-toggle": "^1.1.2",
             "@radix-ui/react-toggle-group": "^1.1.2",
             "@radix-ui/react-tooltip": "^1.1.8",
+            "@tailwindcss/postcss": "^4.1.14",
             "@typescript-eslint/eslint-plugin": "*",
             "@typescript-eslint/parser": "*",
             "@vitejs/plugin-react": "*",
+            "autoprefixer": "^10.4.21",
             "class-variance-authority": "^0.7.1",
             "clsx": "*",
             "cmdk": "^1.1.1",
