--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
       "private": true,
       "type": "module",
       "dependencies": {
+            "@capacitor/android": "^7.4.3",
+            "@capacitor/cli": "^7.4.3",
+            "@capacitor/core": "^7.4.3",
+            "@capacitor/ios": "^7.4.3",
             "@eslint/js": "*",
             "@radix-ui/react-accordion": "^1.2.3",
             "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -42,6 +46,7 @@
             "embla-carousel-react": "^8.6.0",
             "eslint-plugin-react-hooks": "*",
             "eslint-plugin-react-refresh": "*",
+            "firebase": "^12.3.0",
             "globals": "*",
             "input-otp": "^1.4.2",
             "lucide-react": "^0.487.0",
