--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
             "@typescript-eslint/eslint-plugin": "*",
             "@typescript-eslint/parser": "*",
             "@vitejs/plugin-react": "*",
-            "autoprefixer": "^10.4.21",
             "class-variance-authority": "^0.7.1",
             "clsx": "*",
             "cmdk": "^1.1.1",
@@ -61,7 +60,6 @@
             "recharts": "^2.15.2",
             "sonner": "^2.0.3",
             "tailwind-merge": "*",
-            "tailwindcss": "*",
             "vaul": "^1.1.2",
             "vite": "*",
             "vite-plugin-pwa": "*"
@@ -71,6 +69,9 @@
             "@types/react": "^19.2.0",
             "@types/react-dom": "^19.2.0",
             "@vitejs/plugin-react-swc": "^3.10.2",
+            "autoprefixer": "^10.4.21",
+            "postcss": "^8.5.6",
+            "tailwindcss": "^4.1.14",
             "vite": "6.3.5"
       },
       "scripts": {
