--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
             "@radix-ui/react-toggle": "^1.1.2",
             "@radix-ui/react-toggle-group": "^1.1.2",
             "@radix-ui/react-tooltip": "^1.1.8",
+            "@supabase/supabase-js": "^2.74.0",
             "@tailwindcss/postcss": "^4.1.14",
             "@typescript-eslint/eslint-plugin": "*",
             "@typescript-eslint/parser": "*",
@@ -45,7 +46,6 @@
             "embla-carousel-react": "^8.6.0",
             "eslint-plugin-react-hooks": "*",
             "eslint-plugin-react-refresh": "*",
-            "firebase": "^12.3.0",
             "globals": "*",
             "input-otp": "^1.4.2",
             "lucide-react": "^0.487.0",
