--- a/netlify.toml
+++ b/netlify.toml
@@ -3,14 +3,10 @@
   publish = "dist"
 
 [[redirects]]
-  from = "/manifest.json"
-  to = "/manifest.json"
-  status = 200
-
-[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+  force = false
 
 [build.environment]
   NODE_VERSION = "18"
